# kafka-replay-cli

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
dev/: README.md  docker-compose.yml  generate_load.py  run_dump.py  run_replay.py  test_producer.py  view_parquet.py
hooks/: example_transform.py  transform_json.py
kafka_replay_cli/: cli.py  query.py  replay.py
tests/: test_cli_integration.py  test_replay.py
